--- a/Calculus.ipynb
+++ b/Calculus.ipynb
@@ -110,23 +110,24 @@
     "a single number (a scalar). A *scalar field*\n",
     "$f : \\mathbb{R}^n \\rightarrow \\mathbb{R}$, is a real-valued function of\n",
     "$n$ real-valued variables. We can either write the arguments explicitly\n",
-    "as $f(x_1,\\ldots,x_n)$ or as a single vector argument as $f(\\V{x})$. The\n",
+    "as $f(x_1,\\ldots,x_n)$ or as a single vector argument as $f(\\textbf{x})$. The\n",
     "same notions of continuity, minima, and maxima that apply to univariate\n",
     "functions also apply to scalar fields.\n",
     "\n",
     "> **Continuity**. A scalar field $f$ is continuous on a domain $S\\in \\mathbb{R}^n$ if for\n",
-    "> every point $\\V{x} \\in S$ and $\\epsilon > 0$, there exists a\n",
-    "> neighborhood with radius $\\delta$ around $\\V{x}$ that satisfies\n",
-    "> $|f(\\V{x})-f(\\V{y})| < \\epsilon$ for all $y \\in N_\\delta(\\V{x})$.\n",
+    "> every point $\\textbf{x} \\in S$ and $\\epsilon > 0$, there exists a\n",
+    "> neighborhood with radius $\\delta$ around $\\textbf{x}$ that satisfies\n",
+    "> $|f(\\textbf{x})-f(\\textbf{y})| < \\epsilon$ for all $y \\in N_\\delta(\\textbf{x})$.\n",
     "\n",
     "> **Extreme value theorem**. A continuous scalar field $f$ attains a minimum and maximum value on a\n",
     "> *closed* set $S \\subseteq \\mathbb{R}^n$.\n",
     "\n",
-    "> ** Local minima**. $\\V{x}$ is said to be a local minimum of a scalar field $f$ on an *open*\n",
+    "> **Local minima**. $\\textbf{x}$ is said to be a local minimum of a scalar field $f$ on an *open*\n",
     "> set $S \\subseteq \\mathbb{R}^n$ if there exists a neighborhood\n",
-    "> $N_r(\\V{x})$ around $\\V{x}$ such that $f(\\V{x}) < f(\\V{y})$ for all\n",
-    "> $\\V{y} \\in N_r(\\V{x}) \\setminus \\{ \\V{x}\\}$. A similar definition holds\n",
-    "> for local maxina.\n",
+    "> $N_r(\\textbf{x})$ around $\\textbf{x}$ such that $f(\\textbf{x}) < f(\\textbf{y})$ for all\n",
+    "> $\\textbf{y} \\in N_r(\\textbf{x}) \\setminus \\{ \\textbf{x}\\}$. A similar definition holds\n",
+    "> for local maxima.\n",
+    "\n",
     "\n",
     "## Partial derivatives\n",
     "\n",
@@ -139,15 +140,15 @@
     "while fixing all of the other $a_j$'s, $i\\neq j$, constant.\n",
     "\n",
     "We can write this definition more compactly in vector notation:\n",
-    "$$\\frac{\\partial f}{\\partial x_i}(\\V{a}) = \\lim_{h \\rightarrow 0} \\frac{f(\\V{a}+h\\V{e_i})-f(\\V{a})}{h}$$\n",
+    "$$\\frac{\\partial f}{\\partial x_i}(\\textbf{a}) = \\lim_{h \\rightarrow 0} \\frac{f(\\textbf{a}+h\\textbf{e}_{i})-f(\\textbf{a})}{h}$$\n",
     "\n",
     "A third possible interpretation is that we are taking the derivative of\n",
     "the function $$g_i(x) = f(a_1,\\ldots,a_{i-1},x,a_{i+1},\\ldots,a_n)$$ at\n",
     "$x = a_i$. In other words,\n",
-    "$g_i^\\prime(x)|_{x = a_i} =\\frac{\\partial f}{\\partial x_i}(\\V{a})$.\n",
+    "$g_i^\\prime(x)|_{x = a_i} =\\frac{\\partial f}{\\partial x_i}(\\textbf{a})$.\n",
     "\n",
     "(Note that some other texts may use the notation $f_i$ to denote the\n",
-    "partial derivative with respect to the i'th argument to $f$. I find this\n",
+    "partial derivative with respect to the $i$'th argument to $f$. I find this\n",
     "notation to be extremely confusing so we will use the\n",
     "$\\frac{\\partial f}{\\partial x_i}$ notation throughout this class.)\n",
     "\n",
@@ -184,75 +185,75 @@
     "### Directional derivatives\n",
     "\n",
     "The *directional derivative* is another type of derivative that measures\n",
-    "the rate of change of the scalar field $f$ as you move from $\\V{a}$ in a\n",
-    "direction $\\V{d}$. You can think about moving along a ray\n",
-    "$\\V{x}(u) = \\V{a} + u\\V{d}$ standing at $\\V{a}$ and beginning to move\n",
-    "with velocity $\\V{d}$. The directional derivative measures the slope of\n",
+    "the rate of change of the scalar field $f$ as you move from $\\textbf{a}$ in a\n",
+    "direction $\\textbf{d}$. You can think about moving along a ray\n",
+    "$\\textbf{x}(u) = \\textbf{a} + u\\textbf{d}$ standing at $\\textbf{a}$ and beginning to move\n",
+    "with velocity $\\textbf{d}$. The directional derivative measures the slope of\n",
     "the field in your desired direction.\n",
     "\n",
-    "> The **directional derivative** of $f$ at $\\V{a}$ in direction $\\V{d}$ is the value:\n",
-    "> $$\\nabla_{\\V{d}}f(\\V{a}) = \\lim_{h\\rightarrow 0} \\frac{f(\\V{a}+h\\V{d})-f(\\V{a})}{h}.$$\n",
+    "> The **directional derivative** of $f$ at $\\textbf{a}$ in direction $\\textbf{d}$ is the value:\n",
+    "> $$\\nabla_{\\textbf{d}}f(\\textbf{a}) = \\lim_{h\\rightarrow 0} \\frac{f(\\textbf{a}+h\\textbf{d})-f(\\textbf{a})}{h}.$$\n",
     "\n",
-    "Note that the standard partial derivative $\\frac{\\partial}{\\partial_i}f(\\V{a})$ is equivalent to\n",
-    "$\\nabla_{\\V{e_i}}f(\\V{a})$.\n",
+    "Note that the standard partial derivative $\\frac{\\partial}{\\partial i}f(\\textbf{a})$ is equivalent to\n",
+    "$\\nabla_{\\textbf{e}_{i}}f(\\textbf{a})$.\n",
     "\n",
     "### Gradient\n",
     "A fundamental result in multivariate calculus is that *all directional\n",
-    "derivatives* can be expressed as a dot product of $\\V{d}$ with a vector\n",
+    "derivatives* can be expressed as a dot product of $\\textbf{d}$ with a vector\n",
     "known as the *gradient* of $f$. The gradient of $f$, denoted\n",
-    "$\\nabla f(\\V{a})$, is the vector of all partial derivatives of $f$:\n",
-    "$$\\nabla f(\\V{a}) = \\left(\\frac{\\partial}{\\partial x_1} f(\\V{a}), \\ldots, \\frac{\\partial}{\\partial x_n} f(\\V{a})\\right).$$\n",
+    "$\\nabla f(\\textbf{a})$, is the vector of all partial derivatives of $f$:\n",
+    "$$\\nabla f(\\textbf{a}) = \\left(\\frac{\\partial}{\\partial x_1} f(\\textbf{a}), \\ldots, \\frac{\\partial}{\\partial x_n} f(\\textbf{a})\\right).$$\n",
     "\n",
     "We will prove the key result that\n",
-    "$$\\nabla_{\\V{d}}f(\\V{a}) = (\\nabla f(\\V{a})) \\cdot \\V{d}$$\n",
+    "$$\\nabla_{\\textbf{d}}f(\\textbf{a}) = (\\nabla f(\\textbf{a})) \\cdot \\textbf{d}$$\n",
     "\n",
     "We will need a lemma that directional derviatives are linear,\n",
     "specifically that:\n",
-    "$$\\nabla_{c\\V{d}} f(\\V{a}) = c \\nabla_{\\V{d}} f(\\V{a})$$ and\n",
-    "$$\\nabla_{\\V{d}+\\V{e_i}} f(\\V{a}) = \\nabla_{\\V{d}} f(\\V{a}) + \\nabla_{\\V{e_i}} f(\\V{a})$$\n",
-    "for any scalar $c$, vectors $\\V{d}$, $\\V{d_1}$, and $\\V{d_2}$.\n",
+    "$$\\nabla_{c\\textbf{d}} f(\\textbf{a}) = c \\nabla_{\\textbf{d}} f(\\textbf{a})$$ and\n",
+    "$$\\nabla_{\\textbf{d}+\\textbf{e}_{i}} f(\\textbf{a}) = \\nabla_{\\textbf{d}} f(\\textbf{a}) + \\nabla_{\\textbf{e}_{i}} f(\\textbf{a})$$\n",
+    "for any scalar $c$, vectors $\\textbf{d}$, $\\textbf{d}_{1}$, and $\\textbf{d}_{2}$.\n",
     "\n",
     "First, scaling: $$\\begin{split}\n",
-    "\\nabla_{c\\V{d}} f(\\V{a}) &= \\lim_{h\\rightarrow 0} \\frac{f(\\V{a} + ch\\V{d})-f(\\V{a})}{h} \\\\\n",
-    "    &= c \\lim_{h\\rightarrow 0} \\frac{f(\\V{a} + ch\\V{d})-f(\\V{a})}{ch} \\\\\n",
-    "    &= c \\lim_{(ch)\\rightarrow 0} \\frac{f(\\V{a} + ch\\V{d})-f(\\V{a})}{ch} \\\\\n",
-    "    &= c \\lim_{h\\rightarrow 0} \\frac{f(\\V{a} + h\\V{d})-f(\\V{a})}{h} \\\\\n",
-    "    &= c \\nabla_{\\V{d}} f(\\V{a})\n",
+    "\\nabla_{c\\textbf{d}} f(\\textbf{a}) &= \\lim_{h\\rightarrow 0} \\frac{f(\\textbf{a} + ch\\textbf{d})-f(\\textbf{a})}{h} \\\\\n",
+    "    &= c \\lim_{h\\rightarrow 0} \\frac{f(\\textbf{a} + ch\\textbf{d})-f(\\textbf{a})}{ch} \\\\\n",
+    "    &= c \\lim_{(ch)\\rightarrow 0} \\frac{f(\\textbf{a} + ch\\textbf{d})-f(\\textbf{a})}{ch} \\\\\n",
+    "    &= c \\lim_{h\\rightarrow 0} \\frac{f(\\textbf{a} + h\\textbf{d})-f(\\textbf{a})}{h} \\\\\n",
+    "    &= c \\nabla_{\\textbf{d}} f(\\textbf{a})\n",
     "\\end{split}$$\n",
     "\n",
     "Now, let's look at summing.\n",
-    "$$\\nabla_{\\V{d_1}+\\V{d_2}} f(\\V{a}) = \\lim_{h\\rightarrow 0} \\frac{f(\\V{a}+h\\V{d_1}+h\\V{d_2})-f(\\V{a})}{h}$$\n",
+    "$$\\nabla_{\\textbf{d}_{1}+\\textbf{d}_{2}} f(\\textbf{a}) = \\lim_{h\\rightarrow 0} \\frac{f(\\textbf{a}+h\\textbf{d}_{1}+h\\textbf{d}_{2})-f(\\textbf{a})}{h}$$\n",
     "\n",
-    "Now let $g_h(x) = f(\\V{a}+h\\V{d_1} + x\\V{d_2})$ and evaluate the Taylor\n",
+    "Now let $g_h(x) = f(\\textbf{a}+h\\textbf{d}_{1} + x\\textbf{d}_{2})$ and evaluate the Taylor\n",
     "expansion of $g_h(x)$ around $x=0$:\n",
-    "$$g_h(x) = f(\\V{a}+h\\V{d_1}) + g_h^\\prime(x)|_{x=0} x + O(x^2)$$\n",
+    "$$g_h(x) = f(\\textbf{a}+h\\textbf{d}_{1}) + g_h^\\prime(x)|_{x=0} x + O(x^2)$$\n",
     "\n",
     "So $$\\begin{split}\n",
-    "\\nabla_{\\V{d_1}+\\V{d_2}} f(\\V{a}) &= \\lim_{h\\rightarrow 0} \\frac{1}{h}[f(\\V{a}+h\\V{d_1}) + g_h^\\prime(0) h + O(h^2) - f(\\V{a})] \\\\\n",
-    "&= \\lim_{h\\rightarrow 0} \\left(\\frac{1}{h}[f(\\V{a}+h\\V{d_1}) - f(\\V{a}) + O(h^2)] + g_h^\\prime(0) \\right)\\\\\n",
-    "&= \\nabla_{\\V{d_1}} f(\\V{a}) + \\lim_{h\\rightarrow 0} g_h^\\prime(x)|_{x=0}.\n",
+    "\\nabla_{\\textbf{d}_{1}+\\textbf{d}_{2}} f(\\textbf{a}) &= \\lim_{h\\rightarrow 0} \\frac{1}{h}[f(\\textbf{a}+h\\textbf{d}_{1}) + g_h^\\prime(0) h + O(h^2) - f(\\textbf{a})] \\\\\n",
+    "&= \\lim_{h\\rightarrow 0} \\left(\\frac{1}{h}[f(\\textbf{a}+h\\textbf{d}_{1}) - f(\\textbf{a}) + O(h^2)] + g_h^\\prime(0) \\right)\\\\\n",
+    "&= \\nabla_{\\textbf{d}_{1}} f(\\textbf{a}) + \\lim_{h\\rightarrow 0} g_h^\\prime(x)|_{x=0}.\n",
     "\\end{split}$$ The desired result is obtained by noting that\n",
     "$\\lim_{h\\rightarrow 0} g_h^\\prime(x)|_{x=0}$ is identically\n",
-    "$\\nabla_{\\V{d_2}}f(\\V{a})$.\n",
+    "$\\nabla_{\\textbf{d}_{2}}f(\\textbf{a})$.\n",
     "\n",
     "Returning to the original question, we use linearity of the directional\n",
     "derivative to obtain $$\\begin{split}\n",
-    "(\\nabla f(\\V{a})) \\cdot \\V{d} &= \\sum_{i=1}^n d_i \\nabla_{\\V{e_i}}f(\\V{a}) \\\\\n",
-    "&= \\sum_{i=1}^n \\nabla_{d_i \\V{e_i}}f(\\V{a}) \\\\\n",
-    "&= \\nabla_{\\sum_{i=1}^n d_i \\V{e_i}}f(\\V{a}) \\\\\n",
-    "&= \\nabla_{\\V{d}}f(\\V{a})\n",
+    "(\\nabla f(\\textbf{a})) \\cdot \\textbf{d} &= \\sum_{i=1}^n d_{i} \\nabla_{\\textbf{e}_{i}}f(\\textbf{a}) \\\\\n",
+    "&= \\sum_{i=1}^n \\nabla_{d_i \\textbf{e}_{i}}f(\\textbf{a}) \\\\\n",
+    "&= \\nabla {\\sum_{i=1}^n d_i \\textbf{e}_{i}}f(\\textbf{a}) \\\\\n",
+    "&= \\nabla_{\\textbf{d}} f(\\textbf{a})\n",
     "\\end{split}$$ as desired. QED.\n",
     "\n",
     "> **First-order Taylor expansion of a scalar field**.\n",
     "> If a scalar field $f$ is differentiable, we can use the gradient to\n",
-    "> define the first-order Taylor expansion of $f$ about a point $\\V{a}$:\n",
-    "> $$f(\\V{x}) = f(\\V{a}) + (\\nabla f(\\V{a})) \\cdot (\\V{x}-\\V{a}) + O(||\\V{x}-\\V{a}||^2).$$\n",
+    "> define the first-order Taylor expansion of $f$ about a point $\\textbf{a}$:\n",
+    "> $$f(\\textbf{x}) = f(\\textbf{a}) + (\\nabla f(\\textbf{a})) \\cdot (\\textbf{x}-\\textbf{a}) + O(||\\textbf{x}-\\textbf{a}||^2).$$\n",
     "\n",
     "Note that the equation\n",
-    "$f(\\V{x}) = f(\\V{a}) + \\nabla f(\\V{a}) \\cdot (\\V{x}-\\V{a})$ defines a\n",
-    "plane in the $(\\V{x},f)$ space. This says that the first two terms of\n",
+    "$f(\\textbf{x}) = f(\\textbf{a}) + \\nabla f(\\textbf{a}) \\cdot (\\textbf{x}-\\textbf{a})$ defines a\n",
+    "plane in the $(\\textbf{x},f)$ space. This says that the first two terms of\n",
     "the Taylor expansion give the plane that is *tangent to the surface*\n",
-    "defined by $f$ at $\\V{a}$. Moreover, when $\\V{x}$ is close to $\\V{a}$,\n",
+    "defined by $f$ at $\\textbf{a}$. Moreover, when $\\textbf{x}$ is close to $\\textbf{a}$,\n",
     "the fit is quite good. It therefore serves a role that is very much like\n",
     "the tangent line found by the Taylor expansion of a univariate function.\n",
     "\n",
@@ -262,24 +263,24 @@
     "function, and let $c$ be a scalar.\n",
     "\n",
     "-   *Linearity.*\n",
-    "    $\\nabla ( f(\\V{x}) + c g(\\V{x})) = \\nabla f(\\V{x}) + c \\nabla g(\\V{x})$.\n",
+    "    $\\nabla ( f(\\textbf{x}) + c g(\\textbf{x})) = \\nabla f(\\textbf{x}) + c \\nabla g(\\textbf{x})$.\n",
     "\n",
     "-   *Chain rule.*\n",
-    "    $\\nabla h(f(\\V{x})) = h^\\prime(f(\\V{x}))\\nabla f(\\V{x})$.\n",
+    "    $\\nabla h(f(\\textbf{x})) = h^\\prime(f(\\textbf{x}))\\nabla f(\\textbf{x})$.\n",
     "\n",
     "-   *Multiplication rule.*\n",
-    "    $\\nabla (fg)(\\V{x})) = f(\\V{x}) \\nabla g(\\V{x}) + g(\\V{x}) \\nabla f(\\V{x})$.\n",
+    "    $\\nabla (fg)(\\textbf{x}) = f(\\textbf{x}) \\nabla g(\\textbf{x}) + g(\\textbf{x}) \\nabla f(\\textbf{x})$.\n",
     "\n",
     "There is another version of the chain rule that is occasionally useful.\n",
-    "Let $\\V{y}(u)$ be a vector space curve parameterized by\n",
+    "Let $\\textbf{y}(u)$ be a vector space curve parameterized by\n",
     "$u \\in \\mathbb{R}$. Then\n",
-    "$$\\frac{d}{du}(f(\\V{y}(u))) = \\nabla f(\\V{y}(u)) \\cdot \\V{y}^\\prime(u).$$\n",
+    "$$\\frac{d}{du}(f(\\textbf{y}(u))) = \\nabla f(\\textbf{y}(u)) \\cdot \\textbf{y}^\\prime(u).$$\n",
     "In other words, you get the directional derivative of $f$ in the\n",
-    "direction $\\V{y}^\\prime(u)$.\n",
+    "direction $\\textbf{y}^\\prime(u)$.\n",
     "\n",
     "### Critical points\n",
     "Analogously to univariate functions, the critical points of a scalar\n",
-    "field are those points $\\V{x}$ where $\\nabla f(\\V{x})=\\V{0}$. All local\n",
+    "field are those points $\\textbf{x}$ where $\\nabla f(\\textbf{x})=\\textbf{0}$. All local\n",
     "minima and maxima are critical points, but not all critical points are\n",
     "local minima and maxima. These critical points are known as *saddle\n",
     "points* because in two dimensional scalar fields they look like saddles.\n"
@@ -309,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
