--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "The joint probability distribution may be used to order to answer *any*\n",
     "probabilistic question that might be asked about variables in the world.\n",
-    "Let $e$ be an *event*: some logical statement involving any subset of\n",
+    "Let $e$ be an *event* : some logical statement involving any subset of\n",
     "$X_1,\\ldots,X_N$ taking on certain values. Then $P(e)$ is defined as\n",
     "$$P(e) = \\sum_{s\\in S} P(s)I[e\\text{ holds in }s]$$ where $I[x]$ is the\n",
     "*indicator function* that is 1 if $x$ is true and 0 if $x$ is false.\n",
@@ -248,7 +248,7 @@
     "such that\n",
     "$$F(a,b)  = \\int_{-\\infty}^{a}\\int_{-\\infty}^{b} f(x,y) dy dx.$$ An\n",
     "alternate definition of the density takes the limit\n",
-    "$$\\lim_{\\epsilon\\rightarrow 0} P(x\\leq X\\leq x+epsilon,y \\leq Y \\leq y+\\epsilon)/\\epsilon^2 = f(x,y).$$\n",
+    "$$\\lim_{\\epsilon\\rightarrow 0} P(x\\leq X\\leq x+ \\epsilon,y \\leq Y \\leq y+\\epsilon)/\\epsilon^2 = f(x,y).$$\n",
     "[Fig. 1](#fig:Gaussian) illustrates an example of the pdf and cdf for\n",
     "the bivariate Gaussian distribution.\n",
     "\n",
@@ -445,7 +445,7 @@
     "normal) variable $X$ has distribution $\\mathcal{N}(\\mu,\\sigma)$, or\n",
     "$X \\sim N(\\mu,\\sigma^2)$.\n",
     "\n",
-    "The significance of this distribution is the *central limit theorem*:\n",
+    "The significance of this distribution is the *central limit theorem* :\n",
     "the distribution of the mean of a sample of independent, identically\n",
     "distributed random variables approaches a Gaussian as the sample size\n",
     "grows larger. This holds under very few assumptions about the\n",
@@ -466,10 +466,10 @@
     "### Multivariate Gaussians\n",
     "\n",
     "A multivariate Gaussian distribution over a vector-valued random\n",
-    "variable $\\V{X}=[X_1,...,X_n]^T \\in \\mathbb{R}^n$ with mean vector\n",
+    "variable $\\textbf{X}=[X_1,...,X_n]^T \\in \\mathbb{R}^n$ with mean vector\n",
     "$\\boldsymbol{\\mu}$ and covariance matrix $\\Sigma$ has the density\n",
     "function:\n",
-    "$$P(\\V{x}) = N(\\V{x};\\boldsymbol{\\mu},\\Sigma) = \\frac{1}{(2\\pi)^{n/2}\\sqrt{|\\Sigma|}} e^{-\\frac{1}{2} (\\V{x}-\\boldsymbol{\\mu})^T \\Sigma^{-1} (\\V{x}-\\boldsymbol{\\mu})}.\n",
+    "$$P(\\textbf{x}) = N(\\textbf{x};\\boldsymbol{\\mu},\\Sigma) = \\frac{1}{(2\\pi)^{n/2}\\sqrt{|\\Sigma|}} e^{-\\frac{1}{2} (\\textbf{x}-\\boldsymbol{\\mu})^T \\Sigma^{-1} (\\textbf{x}-\\boldsymbol{\\mu})}.\n",
     "\\label{eq:MultivariateGaussian}$$ Like the (univariate) Gaussian\n",
     "distribution, it has a peak at $x=\\boldsymbol{\\mu}$, and its spread is\n",
     "determined by the matrix $\\Sigma$.\n",
@@ -478,12 +478,12 @@
     "\n",
     "The *covariance matrix* is defined as $$\\Sigma_{ij} = Cov[X_i,X_j].$$\n",
     "$\\Sigma$ must be symmetric positive definite as well. Its diagonal\n",
-    "entries define the variance of individual elements of $\\V{x}$, while the\n",
+    "entries define the variance of individual elements of $\\textbf{x}$, while the\n",
     "off-diagonals determine how much it is skewed.\n",
     "\n",
     "For example, consider a 2D Gaussian with mean\n",
     "$\\boldsymbol{\\mu} = \\begin{bmatrix}\\mu_1 \\\\ \\mu_2 \\end{bmatrix}$ and covariance\n",
-    "$$\\Sigma = \\begin{bmatrix}\\Sigma_1 && \\Sigma_{12} \\\\ \\Sigma_{12} & \\Sigma_{2} \\end{bmatrix}.$$ If\n",
+    "$$\\Sigma = \\begin{bmatrix}\\Sigma_1 & \\Sigma_{12} \\\\ \\Sigma_{12} & \\Sigma_{2} \\end{bmatrix}.$$ If\n",
     "$\\Sigma_{12} = 0$, then $X_1$ and $X_2$ are independent, with respective\n",
     "distributions $X_1 \\sim N(\\mu_1,\\Sigma_1)$ and\n",
     "$X_2 \\sim N(\\mu_2,\\Sigma_2)$. Otherwise, the marginal distributions stay\n",
@@ -500,24 +500,24 @@
     "\n",
     "#### Stacking of multivariate Gaussians\n",
     "Independent multivariate Gaussian variables can be stacked according to\n",
-    "the following rule. If $\\V{X} \\sim N(\\boldsymbol{\\mu}_X,\\Sigma_X)$ and\n",
-    "$\\V{Y} \\sim N(\\boldsymbol{\\mu}_Y,\\Sigma_Y)$ are independent, then\n",
-    "$$\\V{Z} = \\begin{bmatrix}\\V{X} \\\\ \\V{Y} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}\\boldsymbol{\\mu}_X \\\\ \\boldsymbol{\\mu}_Y \\end{bmatrix}, \\begin{bmatrix}\\Sigma_X & 0 \\\\ 0 & \\Sigma_Y \\end{bmatrix}\\right)$$\n",
+    "the following rule. If $\\textbf{X} \\sim N(\\boldsymbol{\\mu}_X,\\Sigma_X)$ and\n",
+    "$\\textbf{Y} \\sim N(\\boldsymbol{\\mu}_Y,\\Sigma_Y)$ are independent, then\n",
+    "$$\\textbf{Z} = \\begin{bmatrix}\\textbf{X} \\\\ \\textbf{Y} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}\\boldsymbol{\\mu}_X \\\\ \\boldsymbol{\\mu}_Y \\end{bmatrix}, \\begin{bmatrix}\\Sigma_X & 0 \\\\ 0 & \\Sigma_Y \\end{bmatrix}\\right)$$\n",
     "where the mean and covariance matrix are written in block-matrix form.\n",
     "\n",
     "#### Marginalization of multivariate Gaussians\n",
-    "If $\\V{Z} = \\begin{bmatrix}\\V{X} \\\\ \\V{Y} \\end{bmatrix}$ is Gaussian:\n",
-    "$$\\V{Z} = \\begin{bmatrix}\\V{X} \\\\ \\V{Y} \\end{bmatrix} \\sim N\\left( \\begin{bmatrix}\\boldsymbol{\\mu}_X \\\\ \\boldsymbol{\\mu}_Y \\end{bmatrix}, \\begin{bmatrix} \\Sigma_X & \\Sigma_{XY} \\\\ \\Sigma_{YX} & \\Sigma_Y\\end{bmatrix} \\right)$$\n",
-    "then the marginal distribution of $\\V{X}$ is\n",
-    "$\\V{X} \\sim N(\\boldsymbol{\\mu}_X,\\Sigma_X)$, and the marginal\n",
-    "distribution of $\\V{y}$ is $\\V{Y} \\sim N(\\boldsymbol{\\mu}_Y,\\Sigma_Y)$.\n",
+    "If $\\textbf{Z} = \\begin{bmatrix}\\textbf{X} \\\\ \\textbf{Y} \\end{bmatrix}$ is Gaussian:\n",
+    "$$\\textbf{Z} = \\begin{bmatrix}\\textbf{X} \\\\ \\textbf{Y} \\end{bmatrix} \\sim N\\left( \\begin{bmatrix}\\boldsymbol{\\mu}_X \\\\ \\boldsymbol{\\mu}_Y \\end{bmatrix}, \\begin{bmatrix} \\Sigma_X & \\Sigma_{XY} \\\\ \\Sigma_{YX} & \\Sigma_Y\\end{bmatrix} \\right)$$\n",
+    "then the marginal distribution of $\\textbf{X}$ is\n",
+    "$\\textbf{X} \\sim N(\\boldsymbol{\\mu}_X,\\Sigma_X)$, and the marginal\n",
+    "distribution of $\\textbf{y}$ is $\\textbf{Y} \\sim N(\\boldsymbol{\\mu}_Y,\\Sigma_Y)$.\n",
     "\n",
     "\n",
     "![fig:GaussianTransform](figures/appendix/gaussian_linear_transform.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:GaussianTransform\">Figure 3</a>.\n",
     "    An affine transform of a Gaussian distribution is also a Gaussian. A\n",
-    "transform $A\\V{x}+\\V{b}$ (left) is applied to an initial zero-mean\n",
+    "transform $A\\textbf{x}+\\textbf{b}$ (left) is applied to an initial zero-mean\n",
     "distribution, whose density is displayed in the leftmost contour plot.\n",
     "The middle contour plot displays the density of the resulting\n",
     "distribution. Applying the transform again yields a density in the\n",
@@ -527,43 +527,42 @@
     "\n",
     "Affine transformations of multivariate Gaussians are also Gaussian\n",
     "([Fig. 3](#fig:GaussianTransform)). If\n",
-    "$\\V{X} \\sim N(\\boldsymbol{\\mu},\\Sigma)$, then for any appropriately\n",
-    "sized matrix $A$ and vector $\\V{b}$,\n",
-    "$$A\\V{X}+\\V{b} \\sim N(A\\boldsymbol{\\mu}+\\V{b},A\\Sigma A^T).$$ More\n",
-    "specifically, $\\V{X}$ and $A\\V{X}+\\V{b}$ are jointly distributed\n",
+    "$\\textbf{X} \\sim N(\\boldsymbol{\\mu},\\Sigma)$, then for any appropriately\n",
+    "sized matrix $A$ and vector $\\textbf{b}$, $$A\\textbf{X}+\\textbf{b} \\sim N(A\\boldsymbol{\\mu}+\\textbf{b},A\\Sigma A^T).$$ \n",
+    "More specifically, $\\textbf{X}$ and $A\\textbf{X}+\\textbf{b}$ are jointly distributed\n",
     "according to:\n",
-    "$$\\begin{bmatrix}\\V{X} \\\\ A\\V{X}+\\V{b} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}\\boldsymbol{\\mu} \\\\ A\\boldsymbol{\\mu}+\\V{b} \\end{bmatrix},\\begin{bmatrix}\\Sigma & \\Sigma A^T \\\\ A\\Sigma & A\\Sigma A^T\\end{bmatrix}\\right).$$\n",
+    "$$\\begin{bmatrix}\\textbf{X} \\\\ A\\textbf{X}+\\textbf{b} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}\\boldsymbol{\\mu} \\\\ A\\boldsymbol{\\mu}+\\textbf{b} \\end{bmatrix},\\begin{bmatrix}\\Sigma & \\Sigma A^T \\\\ A\\Sigma & A\\Sigma A^T\\end{bmatrix}\\right).$$\n",
     "\n",
     "#### Sum of multivariate Gaussians\n",
     "The sum of independent multivariate Gaussians is also Gaussian, which\n",
     "can be derived by stacking and linear transformation rule. If\n",
-    "$\\V{X} \\sim N(\\boldsymbol{\\mu}_X,\\Sigma_X)$ and\n",
-    "$\\V{Y} \\sim N(\\boldsymbol{\\mu}_Y,\\Sigma_Y)$ are independent $n$-D\n",
+    "$\\textbf{X} \\sim N(\\boldsymbol{\\mu}_X,\\Sigma_X)$ and\n",
+    "$\\textbf{Y} \\sim N(\\boldsymbol{\\mu}_Y,\\Sigma_Y)$ are independent $n$-D\n",
     "Gaussian variables, then\n",
-    "$$\\V{Z} = \\V{X}+\\V{Y} = [I_n I_n]\\begin{bmatrix}\\V{X} \\\\ \\V{Y} \\end{bmatrix} = N(\\boldsymbol{\\mu}_X+\\boldsymbol{\\mu}_Y,\\Sigma_X+\\Sigma_Y)$$\n",
-    "where $[I_n I_n]$ is the horizontal block matrix of two identity\n",
+    "$$\\textbf{Z} = \\textbf{X}+\\textbf{Y} = [I_n \\quad I_n]\\begin{bmatrix}\\textbf{X} \\\\ \\textbf{Y} \\end{bmatrix} = N(\\boldsymbol{\\mu}_X+\\boldsymbol{\\mu}_Y,\\Sigma_X+\\Sigma_Y)$$\n",
+    "where $[I_n \\quad I_n]$ is the horizontal block matrix of two identity\n",
     "matrices.\n",
     "\n",
     "#### Conditioning of multivariate Gaussians\n",
     "Conditional distributions of multivariate Gaussians are also Gaussian.\n",
-    "Specifically, if $Val(\\V{X}) = \\mathbb{R}^n$ and\n",
-    "$Val(\\V{Y}) = \\mathbb{R}^m$ are jointly Gaussian, that is,\n",
-    "$$\\begin{bmatrix}{\\V{X}} \\\\ {\\V{Y}} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}{\\boldsymbol{\\mu}_X} \\\\ {\\boldsymbol{\\mu}_Y} \\end{bmatrix},\\begin{bmatrix}{\\Sigma_X}&{\\Sigma_{XY}} \\\\ {\\Sigma_{XY}^T}&{\\Sigma_Y} \\end{bmatrix}\\right),$$\n",
-    "then the conditional distribution of $\\V{X}$ given that $\\V{Y}=\\V{y}$ is\n",
+    "Specifically, if $Val(\\textbf{X}) = \\mathbb{R}^n$ and\n",
+    "$Val(\\textbf{Y}) = \\mathbb{R}^m$ are jointly Gaussian, that is,\n",
+    "$$\\begin{bmatrix}{\\textbf{X}} \\\\ {\\textbf{Y}} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}{\\boldsymbol{\\mu}_X} \\\\ {\\boldsymbol{\\mu}_Y} \\end{bmatrix},\\begin{bmatrix}{\\Sigma_X}&{\\Sigma_{XY}} \\\\ {\\Sigma_{XY}^T}&{\\Sigma_Y} \\end{bmatrix}\\right),$$\n",
+    "then the conditional distribution of $\\textbf{X}$ given that $\\textbf{Y}=\\textbf{y}$ is\n",
     "also Gaussian:\n",
-    "$$P(\\V{x}|\\V{y}) = N\\left( \\V{x};\\boldsymbol{\\mu}_X+\\Sigma_{XY}\\Sigma_Y^{-1}(\\V{y}-\\boldsymbol{\\mu}_Y),\\Sigma_X - \\Sigma_{XY}\\Sigma_Y^{-1}\\Sigma_{XY}^T \\right)\n",
+    "$$P(\\textbf{x}|\\textbf{y}) = N\\left( \\textbf{x};\\boldsymbol{\\mu}_X+\\Sigma_{XY}\\Sigma_Y^{-1}(\\textbf{y}-\\boldsymbol{\\mu}_Y),\\Sigma_X - \\Sigma_{XY}\\Sigma_Y^{-1}\\Sigma_{XY}^T \\right)\n",
     "\\label{eq:GaussianConditioning}$$ It can be observed that the mean of\n",
     "the new distribution depends on the value of $y$, but the covariance\n",
-    "does not. Observe also that if $\\V{X}$ and $\\V{Y}$ are independent\n",
-    "($\\Sigma_{XY}=0$), then knowing the value of $\\V{Y}$ does not change the\n",
-    "marginal distribution of $\\V{X}$.\n",
+    "does not. Observe also that if $\\textbf{X}$ and $\\textbf{Y}$ are independent\n",
+    "($\\Sigma_{XY}=0$), then knowing the value of $\\textbf{Y}$ does not change the\n",
+    "marginal distribution of $\\textbf{X}$.\n",
     "\n",
     "[Fig. 2](#fig:GaussianMarginalization), right illustrates conditioning\n",
-    "on a zero-mean Gaussian with $\\Sigma=\\MatTwo{0.25}{0.3}{0.3}{1}$ at\n",
+    "on a zero-mean Gaussian with $$\\Sigma=\\begin{bmatrix}{0.25}&{0.3} \\\\ {0.3}&{1} \\end{bmatrix}$$ at\n",
     "$x_1=1$. According to\n",
     "($\\ref{eq:GaussianConditioning}$), the mean of $x_2$ becomes\n",
     "$0.3\\cdot 0.25^{-1} \\cdot 1 = 1.2$, and its variance becomes\n",
-    "$1 - 0.3\\cdot 0.25^{-1} \\cdot 0.3 = 0.64$."
+    "$1 - 0.3\\cdot 0.25^{-1} \\cdot 0.3 = 0.64$.\n"
    ]
   },
   {
@@ -590,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
