--- a/DataStructures.ipynb
+++ b/DataStructures.ipynb
@@ -78,7 +78,7 @@
     "or there exists a directed path from $v$ to $w$. In other words, $v$'s\n",
     "descendants are $v$, $v$'s children, $v$'s children's children, and so\n",
     "on. The tree consisting of $v$'s descendants and edges between them is\n",
-    "also known as the *subtree* at $v$. In the subtree. $v$ is the root\n",
+    "also known as the *subtree* at $v$. In the subtree, $v$ is the root\n",
     "([Fig. 1](#fig:Tree).c).\n",
     "\n",
     "## Representations\n",
@@ -93,7 +93,7 @@
     "- `children`: array or list of `TreeNode`s.\n",
     "- `parent`: optional, a `TreeNode` reference.\n",
     "\n",
-    "Then the entire tree is stored as the root `T`reeNode. With this\n",
+    "Then the entire tree is stored as the root `TreeNode`. With this\n",
     "structure it is possible to search downward from the root for any\n",
     "desired node. If the parent member is present, then it is also possible\n",
     "to search upward from any node.\n",
@@ -180,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
