--- a/GraphSearch.ipynb
+++ b/GraphSearch.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "The most famous graph search method is *Dijkstra's algorithm*. It\n",
     "calculates an optimal path when one exists, and works in\n",
-    "O($|E| + |V| \\log |V|$) time and O($|V|$) space, when implemented with\n",
+    "$O(|E| + |V| \\log |V|$) time and $O(|V|$) space, when implemented with\n",
     "an appropriate priority queue data structure. The general idea is to\n",
     "iterate through all unexplored vertices, ordered in increasing cost from\n",
     "the start (cost-to-come) $d[v]$ . All vertices have estimated\n",
@@ -295,9 +295,9 @@
     "\n",
     "6. $v \\gets$ vertex in $Q$ that minimizes $d[v] + h(v)$\n",
     "\n",
-    "we obtain a method called *A\\* search*. This method is proven to\n",
+    "we obtain a method called *$A^* search$*. This method is proven to\n",
     "calculate optimal paths under the conditions that $h(v)$ is *admissible*\n",
-    "and *consistent*. Admissibility means that $h(v)$ is a lower bound on\n",
+    "and *consistent* . Admissibility means that $h(v)$ is a lower bound on\n",
     "the true cost from $v$ to $g$ in the graph, and consistency means that\n",
     "$h(v)$ becomes more accurate as $v$ approaches $g$. (Specifically,\n",
     "$h(u) \\leq h(v) + c(u,w)$ for all edges $(u,v) \\in E$.)"
@@ -742,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
