--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -130,32 +130,32 @@
     "\n",
     "#### Summary\n",
     "\n",
-    "Given a differentiable scalar field $f(\\V{x})$ and an initial guess\n",
-    "$\\V{x_1}$, gradient descent iteratively moves the guess toward lower\n",
+    "Given a differentiable scalar field $f(\\textbf{x})$ and an initial guess\n",
+    "$\\textbf{x}_1$, gradient descent iteratively moves the guess toward lower\n",
     "values of $f$ by taking steps in the direction of the negative gradient\n",
-    "$-\\nabla f(\\V{x})$. Locally, the negated gradient is the steepest\n",
-    "descent direction, i.e., the direction that $\\V{x}$ would need to move\n",
+    "$-\\nabla f(\\textbf{x})$. Locally, the negated gradient is the steepest\n",
+    "descent direction, i.e., the direction that $\\textbf{x}$ would need to move\n",
     "in order to decrease $f$ the fastest. The algorithm typically converges\n",
     "to a local minimum, but may rarely reach a saddle point, or not move at\n",
-    "all if $\\V{x_1}$ lies at a local maximum.\n",
+    "all if $\\textbf{x}_{1}$ lies at a local maximum.\n",
     "\n",
     "#### The gradient is the steepest descent direction\n",
     "\n",
-    "The first order Taylor approximation of $f(\\V{x})$ about $f(\\V{x_1})$ is\n",
-    "$$f(\\V{x}) = f(\\V{x_1}) + \\nabla f(\\V{x_1}) \\cdot (\\V{x}-\\V{x_1}) + O(||\\V{x}-\\V{x_1}||^2).$$\n",
-    "Consider moving from $\\V{x_1}$ a small amount $h$ in a unit direction\n",
-    "$\\V{u}$. We want to find the $\\V{u}$ that minimizes\n",
-    "$f(\\V{x_1} + h\\V{u})$. Using the Taylor expansion, we see that\n",
-    "$$f(\\V{x_1} + h\\V{u}) - f(\\V{x_1}) =  h \\nabla f(\\V{x_1}) \\cdot \\V{u} +  h^2 O(1).$$\n",
+    "The first order Taylor approximation of $f(\\textbf{x})$ about $f(\\textbf{x}_{1})$ is\n",
+    "$$f(\\textbf{x}) = f(\\textbf{x}_{1}) + \\nabla f(\\textbf{x}_{1}) \\cdot (\\textbf{x}-\\textbf{x}_{1}) + O(||\\textbf{x}-\\textbf{x}_{1}||^2).$$\n",
+    "Consider moving from $\\textbf{x}_{1}$ a small amount $h$ in a unit direction\n",
+    "$\\textbf{u}$. We want to find the $\\textbf{u}$ that minimizes\n",
+    "$f(\\textbf{x}_{1} + h\\textbf{u})$. Using the Taylor expansion, we see that\n",
+    "$$f(\\textbf{x}_{1} + h\\textbf{u}) - f(\\textbf{x}_{1}) =  h \\nabla f(\\textbf{x}_{1}) \\cdot \\textbf{u} +  h^2 O(1).$$\n",
     "If we make the $h^2$ term insignificant by shrinking $h$, we see that in\n",
-    "order to decrease $f(\\V{x_1} + h\\V{u}) - f(\\V{x_1})$ the fastest we must\n",
-    "minimize $\\nabla f(\\V{x_1}) \\cdot \\V{u}$. The unit vector that minimizes\n",
-    "$\\nabla f(\\V{x_1}) \\cdot \\V{u}$ is\n",
-    "$\\V{u} = -\\nabla f(\\V{x_1}) / || \\nabla f(\\V{x_1}) ||$ as desired.\n",
+    "order to decrease $f(\\textbf{x}_{1} + h\\textbf{u}) - f(\\textbf{x}_{1})$ the fastest we must\n",
+    "minimize $\\nabla f(\\textbf{x}_{1}) \\cdot \\textbf{u}$. The unit vector that minimizes\n",
+    "$\\nabla f(\\textbf{x}_{1}) \\cdot \\textbf{u}$ is\n",
+    "$\\textbf{u} = -\\nabla f(\\textbf{x}_{1}) / || \\nabla f(\\textbf{x}_{1}) ||$ as desired.\n",
     "\n",
     "#### Algorithm\n",
     "\n",
-    "The algorithm is initialized with a guess $\\V{x_1}$, a maximum iteration\n",
+    "The algorithm is initialized with a guess $\\textbf{x}_{1}$, a maximum iteration\n",
     "count $N_{max}$, a gradient norm tolerance $\\epsilon_g$ that is used to\n",
     "determine whether the algorithm has arrived at a critical point, and a\n",
     "step tolerance $\\epsilon_x$ to determine whether significant progress is\n",
@@ -166,14 +166,14 @@
     "\n",
     "1. **for** {$t=1,2,\\ldots,N_{max}$}\n",
     "\n",
-    "2. &nbsp;&nbsp;&nbsp; $\\V{x_{t+1}} \\gets \\V{x_{t}} - \\alpha_t \\nabla f(\\V{x_{t}})$\n",
+    "2. &nbsp;&nbsp;&nbsp; $\\textbf{x}_{t+1} \\gets \\textbf{x}_{t} - \\alpha_t \\nabla f(\\textbf{x}_{t})$\n",
     "\n",
-    "3. &nbsp;&nbsp;&nbsp; **if** $\\|\\nabla f(\\V{x_{t}})\\| < \\epsilon_g$ **return** \"Converged\n",
+    "3. &nbsp;&nbsp;&nbsp; **if** $\\|\\nabla f(\\textbf{x}_{t})\\| < \\epsilon_g$ **return** \"Converged\n",
     "on critical point\"\n",
     "\n",
-    "4. &nbsp;&nbsp;&nbsp; **if** $\\|V{x_{t+1}}-\\V{x_{t}}\\| < \\epsilon_x$ **return** \"Converged on an $x$ value\"\n",
+    "4. &nbsp;&nbsp;&nbsp; **if** $\\|\\textbf{x}_{t+1}-\\textbf{x}_{t}\\| < \\epsilon_x$ **return** \"Converged on an $x$ value\"\n",
     "\n",
-    "5. &nbsp;&nbsp;&nbsp; **if** $f(\\V{x_{t+1}}) > f(\\V{x}_t)$ **return** \"Diverging\"\n",
+    "5. &nbsp;&nbsp;&nbsp; **if** $f(\\textbf{x}_{t+1}) > f(\\textbf{x}_{t})$ **return** \"Diverging\"\n",
     "\n",
     "6. **return** \"Maximum number of iterations reached\"\n",
     "*****************\n",
@@ -185,7 +185,7 @@
     "#### Choosing a step size using line search\n",
     "\n",
     "To a first-order approximation, each step decreases the value of $f$ by\n",
-    "approximately $\\alpha_t ||\\nabla f(\\V{x_0})||^2$. If $\\alpha_t$ is too\n",
+    "approximately $\\alpha_t ||\\nabla f(\\textbf{x}_{0})||^2$. If $\\alpha_t$ is too\n",
     "small, then the algorithm will converge very slowly. On the other hand,\n",
     "if the step size $\\alpha_t$ is not chosen small enough, then the\n",
     "algorithm may fail to reduce the value of $f$. (Because the first order\n",
@@ -195,12 +195,12 @@
     "a reduction in $f$ while still making sufficiently fast progress. This\n",
     "procedure is known as a *line search* and is employed in many\n",
     "multivariate optimization algorithms. The input to a line search is a\n",
-    "function $f$, an initial point $\\V{x}$ and direction $\\V{d}$, initial\n",
+    "function $f$, an initial point $\\textbf{x}$ and direction $\\textbf{d}$, initial\n",
     "candidate step size $\\gamma_1$. The output is a step size $\\gamma > 0$\n",
-    "such that $f(\\V{x}+\\gamma \\V{d}) < f(\\V{x})$, or failure if the step\n",
+    "such that $f(\\textbf{x}+\\gamma \\textbf{d}) < f(\\textbf{x})$, or failure if the step\n",
     "size falls below some threshold.\n",
     "\n",
-    "The first step is to check whether $\\V{x} + \\gamma_1 \\V{d}$ decreases\n",
+    "The first step is to check whether $\\textbf{x} + \\gamma_1 \\textbf{d}$ decreases\n",
     "the value of $f$. If so, then we can either terminate the line search,\n",
     "or search for a larger valid $\\gamma$ by repeated doubling:\n",
     "$\\gamma_n = \\gamma_1 2^n$. If a step of size $\\gamma_1$ increases $f$,\n",
@@ -355,7 +355,7 @@
     "\n",
     "$$\\nabla f(x^\\star) + \\lambda^\\star \\nabla h(x^\\star) = 0.$$\n",
     "\n",
-    "Because $\\lambda^\\star$ can be arbitrary, this means that at $x^\\star$, $\\nabla f$ and $\\nabla h$ are _aligned_,  Moreover, $\\nabla f \\neq 0$.  It does not matter how the gradients are scaled with respect to one another, since $\\lambda^\\star$ can vary freely.  In other words, the direction in which $x$ is \"pulled\" by the gradient of $f$ is canceled out because it cannot move along the surface $h(x)=0$.\n",
+    "Because $\\lambda^\\star$ can be arbitrary, this means that at $x^\\star$, $\\nabla f$ and $\\nabla h$ are $\\textit{aligned}$,  Moreover, $\\nabla f \\neq 0$.  It does not matter how the gradients are scaled with respect to one another, since $\\lambda^\\star$ can vary freely.  In other words, the direction in which $x$ is \"pulled\" by the gradient of $f$ is canceled out because it cannot move along the surface $h(x)=0$.\n",
     "\n",
     "The multiple-constraint case is simply an analogue of this, to account for the multiple constraint gradient directions being able to combine, in arbitrary linear combinations, to cancel out the \"pull\" of $\\nabla f$.\n",
     "\n",
@@ -431,7 +431,7 @@
     "\n",
     "Note that due to nonlinearity, there is no guarantee of finding a global optimum, and moreover there is no guarantee that these methods will even find a point in the feasible set $ \\{ x \\,|\\, g(x) \\leq 0, h(x) = 0\\}$.\n",
     "\n",
-    "Software for solving such problems are available in SNOPT, IPOPT, Matlab's `fmincon` function, and Scipy's [`minimize`](https://docs.scipy.org/doc/scipy/reference/optimize.minimize.html) function.  Although LP and QP problems are subsumed by the class of NLP problems, general NLP solvers are usually not as fast or reliable as special-purpose solvers.\n",
+    "Software for solving such problems are available in SNOPT, IPOPT, Matlab's `fmincon` function, and Scipy's `minimize` (https://docs.scipy.org/doc/scipy/reference/optimize.minimize.html) function.  Although LP and QP problems are subsumed by the class of NLP problems, general NLP solvers are usually not as fast or reliable as special-purpose solvers.\n",
     "\n"
    ]
   },
@@ -459,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
