Missing equals sign

--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -408,7 +408,7 @@
     "\n",
     "Hence, we derive the first link's transform:\n",
     "\n",
-    "$$T_1(q_1) = \\begin{bmatrix} 1 & 0 & L_0  \\\\ 0 & 1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix} \\begin{bmatrix} \\cos q_1 & -\\sin q_1 & 0 \\\\ \\sin q_1 & \\cos q_1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix} \\begin{bmatrix} \\cos q_1 & -\\sin q_1 & L_0 \\\\ \\sin q_1 & \\cos q_1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix}$$\n",
+    "$$T_1(q_1) = \\begin{bmatrix} 1 & 0 & L_0  \\\\ 0 & 1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix} \\begin{bmatrix} \\cos q_1 & -\\sin q_1 & 0 \\\\ \\sin q_1 & \\cos q_1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix} = \\begin{bmatrix} \\cos q_1 & -\\sin q_1 & L_0 \\\\ \\sin q_1 & \\cos q_1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix}$$\n",
     "\n",
     "Then, the second link's transform are given by:\n",
     "$$T_2(q_1,q_2) = T_1(q_1) \n",
