Added discussion about systems

--- a/WhatIsRobotics.ipynb
+++ b/WhatIsRobotics.ipynb
@@ -80,7 +80,7 @@
     "<sup>[1]</sup>: Presumably, by time of publication, self-driving cars are not yet widely commercially available.\n",
     "\n",
     "\n",
-    "How to Develop a Robot\n",
+    "How to develop a robot\n",
     "----------------------\n",
     "\n",
     "A roboticist is a thinker, not a tinkerer. Although many students begin\n",
@@ -189,6 +189,43 @@
     "\n",
     "-   Is up-to-date on current design tools, hardware, software,\n",
     "    algorithms, and programming languages used in robotics.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Abstractions\n",
+    "\n",
+    "> **System** (n). A thing of such complexity that a human can only begin to comprehend it using cartoons.\n",
+    "\n",
+    "This statement, although tongue-in-cheek, is actually fairly\n",
+    "accurate.  A system is composed of many interacting parts, each of which is individually complex,\n",
+    "and it would take ages to understand deeply how everything works and interacts. \n",
+    "The \"cartoons\" referred to above are known (especially in the computing world)\n",
+    "as **abstractions**.  An abstraction is a \"black box\" with inputs and outputs\n",
+    "that performs some understandable function, which lets you ignore, to some\n",
+    "extent, what goes on \"under the hood\".\n",
+    "\n",
+    "For example, to a first approximation, the basic function of a car is to\n",
+    "turn on when a key is turned in the ignition, steer when the steering wheel is turned,\n",
+    "accelerate when the accelerator is pressed, and decelerate when the brake is pressed.\n",
+    "This is the implied *contract* that the abstraction of a car makes with to a user; \n",
+    "it makes little difference what type of material the tires are made of, the amount of wear\n",
+    "on the brake pads, the function of the differential, whether the engine's fuel air mixture\n",
+    "is controlled by computer or carburetor, whether the car's chassis was welded by robot or by human, or even whether the motor is an electric or combustion engine.  It can generally be assumed that driving the car will take you from point A to point B, assuming that A and B are connected by roads and that we know how to operate a car.  But a car is an incredibly complex machine, comprised of tens of thousands of mechanical parts, and modern cars have millions of lines of computer code.  We don't have to understand each of these little components; the car just works as a transportation device.  This is the cartoon we tell ourselves, and most of the time the car operates just as the cartoon tells us.\n",
+    "\n",
+    "Ah, you say, but what if the car is out of gas, or a tire is flat, or a family of bears has broken into your car and set up a den in the back seat?  Well, these areas in which the cartoon \"breaks down\".  This is also known as a *leaky abstraction*, because some factors that were unspecified in our abstract, assumed contract have \"leaked\" into the black box to cause unexpected or undesirable behavior.  A famous software engineering principle states that [\"all abstractions are, to some extent, leaky\"](https://www.joelonsoftware.com/2002/11/11/the-law-of-leaky-abstractions/).  This certainly holds true for robotics as well.  \n",
+    "\n",
+    "The development of a robot will certainly generate many interacting components, each of which performs a complex mechanical or software function.  Due to this complexity, multiple engineers will work on multiple components, and the only way to tractably comprehend the entire system is through abstraction.  A good engineer will properly *label* their component and *summarize* its function in an easy to understand manner.  E.g., the perception module gives the identity and location of all of the interesting things in view of the robot's cameras; the planning module waits for an instruction from a user and then plans a motion to act as requested; the controller module executes a current motion, and updates the motion whenever the planner requests it; the UI module shows the user the state of the robot, performs speech recognition, and translates words into recognized commands.  Moreover, she will *document* the components' specifications in a way that other engineers can use it in a predictable manner. \n",
+    "\n",
+    "An important function of abstractions is that they let us swap **implementations** of what goes on \"under the hood\".  We will describe several IK solvers, motion planners, trajectory optimizers, state estimators, and object recognizers.  All of them, although they may perform the same intended function, will differ in terms of performance characteristics (e.g., for algorithms, computational complexity, failure rates, network usage; for hardware, speed, strength, noise, and power consumption).  Different versions of an algorithm's code will also be swappable, and may have vastly different performance characteristics.  For example, 3D mapping on a GPU is orders of magnitude faster than doing it on a CPU.  It is a general rule that there will be many potential implementations of a given robot component, and more will be developed every year. A good architect of a robotic system will need to research and understand the state-of-the-art and plan how the system is developed to optimize the trade-offs between performance, resource usage, and implementation difficulty.\n",
+    "\n",
+    "A major goal of this book is to aid in the process of systems engineering by:\n",
+    "1. Defining standard abstractions used in robotics\n",
+    "2. Describing where these abstractions leak, why they leak, and what can be done to plug the leaks to the extent possible\n",
+    "3. Presenting multiple implementations, and explain their performance characteristics\n",
     "\n"
    ]
   },
