Fixed some HTML rendering problem

--- a/WhatAreDynamicsAndControl.ipynb
+++ b/WhatAreDynamicsAndControl.ipynb
@@ -370,9 +370,11 @@
     "\n",
     "A *stable point* is a state $x$ such that for some neighborhood\n",
     "of $x$, the ODE is convergent toward $x$. A necessary condition for a\n",
-    "point to be stable is $f(x) = 0$, and points that satisfy this criteria\n",
-    "are known as *equilibrium points*. All stable points are equilibria, but\n",
-    "the converse is not true.\n",
+    "point to be stable is that it is an *equilibrium point*.\n",
+    "\n",
+    "> **Equilibrium point**. For a continuous time dynamical system, a state $x$ such that $\\dot{x} = f(x) = 0$.  For a discrete time dynamical system, a state that satisfies $x = f(x)$.\n",
+    "\n",
+    "All stable points are equilibria, but the converse is not true. For example, in the system $\\dot{x} = x$, $x=0$ is an equilibrium point, but it is not stable.  Through inspection, observe that $x(t) = c e^t$  is a solution to this differential equation.  Hence, a tiny perturbation $x(0) = \\epsilon$ would yield the solution trajectory $x(t) = \\epsilon e^t$, which grows without bound as $t$ grows.\n",
     "\n",
     "The trajectories derived from Euler integration can be divergent even when the underlying system itself is stable or convergent.  As an example, consider the damped harmonic oscillator system $$\\ddot{x} = -10x - \\dot{x}$$.\n",
     "\n",
@@ -681,18 +683,25 @@
     "\n",
     "In [Chapter 14](RobotDynamics.ipynb), we shall derive the equations\n",
     "of motion for the cart-pole system to be the second-order system of\n",
-    "equations: $$\\begin{aligned}\n",
+    "equations:\n",
+    "\n",
+    "$$\\begin{aligned}\n",
     "(m_1+m_2) \\ddot{q_1} -\\frac{m_2 L}{2} \\ddot{q}_2  \\sin q_2 - \\frac{m_2 L}{2} \\dot{q}_2^2  \\cos q_2 = u_1 \\\\\n",
     "-\\frac{m_2 L}{2} \\ddot{q}_1  \\sin q_2 + \\frac{m_2 L^2}{4} \\ddot{q}_2 + m_2 g \\cos q_2 = u_2\n",
-    "\\end{aligned}$$ where $g$ is the gravitational constant. Notice here\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "where $g$ is the gravitational constant. Notice here\n",
     "that the accelerations $\\ddot{q}_1$ and $\\ddot{q}_2$ are coupled, in\n",
     "that they appear in both equations. Solving this system of equations, we\n",
-    "obtain a solution: $$\\begin{bmatrix}{\\ddot{q}_1}\\\\{\\ddot{q}_2}\\end{bmatrix} = \n",
+    "obtain a solution:\n",
+    "\n",
+    "$$\\begin{bmatrix}{\\ddot{q}_1}\\\\{\\ddot{q}_2}\\end{bmatrix} = \n",
     "\\frac{1}{d} \\begin{bmatrix}\n",
     "\\frac{m_2 L^2}{4} & \\frac{m_2 L}{2} \\sin q_2 \\\\\n",
     "\\frac{m_2 L}{2} \\sin q_2 & m_1+m_2 \n",
     "\\end{bmatrix}\n",
     "\\begin{bmatrix}{u_1 + \\frac{m_2 L}{2} \\dot{q}_2^2 \\cos q_2}\\\\{u_2-m_2 g \\cos q_2}\\end{bmatrix}$$\n",
+    "\n",
     "with $d= \\frac{m_1 m_2 L^2}{4}+\\frac{m_2^2 L^2}{4} \\cos^2 q_2$. For any\n",
     "given choice of $u_1$ and $u_2$, this can then be integrated to obtain\n",
     "solution trajectories.\n",
@@ -704,6 +713,7 @@
     "swings over the upright position only for periods in approximately the\n",
     "range $[1.12,1.29]$. There is another range of periods where the pole is\n",
     "swung about the upright position in the range $[1.32,1.39]$.\n",
+    "\n",
     "\n",
     "*************\n",
     "\n",
@@ -1007,7 +1017,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
